# admin-system-tenant-api

src/: alembic.ini  app.py  config.json  main.py  pyproject.toml  requirements.txt
src/alembic/: env.py  script.py.mako
src/alembic/versions/: 094e7914cda9_cria_tabelas_de_gerenciamento_.py  0db905594f1b_cria_tabelas_de_gerenciamento_.py  1b8d1fbb0e39_cria_tabelas_de_gerenciamento_.py  2d3c93aab903_cria_tabelas_de_gerenciamento_.py  35bb485b7eb1_cria_tabelas_de_gerenciamento_.py  3a78feb8c322_cria_tabelas_de_gerenciamento_.py  6ee0091cecff_cria_tabelas_de_gerenciamento_.py  a09489162151_cria_tabelas_de_gerenciamento_.py  b0fad52807ad_cria_tabelas_de_gerenciamento_.py  b101296f7101_cria_tabelas_de_gerenciamento_.py  b805232d359f_cria_tabelas_de_gerenciamento_.py  cc532809a9e4_cria_tabelas_de_gerenciamento_.py
src/backend/: database.py  db_init.py  dependencies.py  schemas.py
src/backend/models/: models.py  tenant.py
src/backend/repository/: userRepo.py
src/backend/routers/: materials.py  users.py
src/backend/security/: authHandler.py  hashHelper.py
src/backend/services/: materialService.py  userService.py
src/frontend/: __init__.py  main.py
src/frontend/images/: resources.qrc
src/frontend/pages/: page.ui  ui_modmatwindow.py  ui_page.py
src/frontend/services/: __init__.py  api_client.py  async_methods.py  stock_service.py
src/frontend/widgets/: __init__.py  py_push_button.py
src/frontend/windows/: __init__.py  modificar_material_window.py
src/test/: TESTAR_SISTEMA.py
src/test/backend/: EXEMPLO_CLIENTE_FLET.py  EXEMPLO_ROTAS_PROTEGIDAS.py  (+1 more)
(+3 files in other folders)
